--- a/lib/gsasl.h.in
+++ b/lib/gsasl.h.in
@@ -86,6 +86,7 @@ enum {
   GSASL_MECHANISM_PARSE_ERROR,
   GSASL_AUTHENTICATION_ERROR,
   GSASL_CANNOT_GET_CTX,
+  GSASL_INTEGRITY_ERROR,
   GSASL_NO_MORE_REALMS
 };
 
@@ -154,6 +155,14 @@ extern int gsasl_server_step_base64 (Gsasl_session_ctx *xctx,
 				     char *b64output,
 				     size_t b64output_len);
 extern void gsasl_server_finish (Gsasl_session_ctx *xctx);
+
+/* Session functions: xcode.c */
+extern int gsasl_encode (Gsasl_session_ctx *xctx,
+			 const char *input, size_t input_len,
+			 char *output, size_t *output_len);
+extern int gsasl_decode (Gsasl_session_ctx *xctx, 
+			 const char *input, size_t input_len,
+			 char *output, size_t *output_len);
 
 /* Error handling: error.c */
 extern const char *gsasl_strerror (int err);
