Add xcode.c to the session API documentation.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -56,7 +56,8 @@ gsasl_api_callback_deps = $(top_srcdir)/lib/callback.c
 
 gsasl_api_session_deps = $(top_srcdir)/lib/xstart.c \
 			$(top_srcdir)/lib/xstep.c \
-			$(top_srcdir)/lib/xfinish.c
+			$(top_srcdir)/lib/xfinish.c \
+			$(top_srcdir)/lib/xcode.c
 
 gsasl_api_utils_deps = $(top_srcdir)/lib/base64.c \
 			 $(top_srcdir)/lib/hexdump.c \
