Add indent Makefile targets. Indent all files.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -50,3 +50,6 @@ DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
 
 gunicomp.h gunidecomp.h: gen-unicode-tables.pl UnicodeData-3.2.0.txt LineBreak-3.2.0.txt SpecialCasing-3.2.0.txt CaseFolding-3.2.0.txt CompositionExclusions-3.2.0.txt
 	$(PERL) $(srcdir)/gen-unicode-tables.pl -decomp 3.2 UnicodeData-3.2.0.txt LineBreak-3.2.0.txt SpecialCasing-3.2.0.txt CaseFolding-3.2.0.txt CompositionExclusions-3.2.0.txt
+
+indent:
+	indent $(libgsasl_la_SOURCES)
