--- a/Makefile.am
+++ b/Makefile.am
@@ -22,3 +22,6 @@ SUBDIRS = m4 intl po argp lib src tests doc
 ACLOCAL_AMFLAGS = -I m4 -I argp
 
 EXTRA_DIST = config.rpath mkinstalldirs
+
+ChangeLog:
+	cvs2cl --fsf --usermap .cvsusers --separate-header
