--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,7 +31,7 @@ m4data_DATA = libgsasl.m4
 bin_PROGRAMS = gsasl
 
 gsasl_SOURCES = gsasl.c callbacks.h callbacks.c gettext.h
-gsasl_LDADD = ../lib/libgsasl.la @LIBARGP@ libcharset/libcharset.la
+gsasl_LDADD = ../lib/libgsasl.la @LTLIBINTL@ @LIBARGP@ libcharset/libcharset.la
 
 indent:
 	indent $(gsasl_SOURCES)
