Ignore some files for ChangeLog entries.

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,4 +27,5 @@ SUBDIRS = m4 intl po argp lib src tests doc
 ACLOCAL_AMFLAGS = -I m4 -I argp
 
 ChangeLog:
-	cvs2cl --fsf --usermap .cvsusers --separate-header
+	cvs2cl --fsf --usermap .cvsusers --separate-header -I \
+	"ChangeLog|.cvsignore|.cvsusers|autogen.sh|doc/specification/.*"
