--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -17,18 +17,15 @@
 # License along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA
 
-EXTRA_DIST = gen-unicode-tables.pl UnicodeData-3.2.0.txt LineBreak-3.2.0.txt SpecialCasing-3.2.0.txt CaseFolding-3.2.0.txt CompositionExclusions-3.2.0.txt
-
 lib_LTLIBRARIES = libgsasl.la
 
-INCLUDES = -I../argp -I../intl @LIBNTLM_CFLAGS@ @LIBGCRYPT_CFLAGS@ @GSSAPI_CFLAGS@
+INCLUDES = -I../intl @LIBNTLM_CFLAGS@ @LIBGCRYPT_CFLAGS@ @GSSAPI_CFLAGS@ @LIBSTRINGPREP_CFLAGS@
 
 include_HEADERS = gsasl.h
 
 libgsasl_la_SOURCES = init.c done.c error.c version.c callback.c \
 			supportp.c suggest.c listmech.c \
 			hexdump.c base64.c md5pwd.c \
-			unicode.c gunidecomp.h gunicomp.h \
 			xstart.c xstep.c xfinish.c xcode.c \
 			common.c internal.h gettext.h \
 			external.h external.c \
@@ -41,15 +38,12 @@ libgsasl_la_SOURCES = init.c done.c error.c version.c callback.c \
 			x-gssapi.h gssapi.c \
 			securid.h securid.c
 
-libgsasl_la_LIBADD = @LIBINTL@ @LIBGCRYPT_LIBS@ @LIBNTLM_LIBS@ @GSSAPI_LIBS@ -lm
+libgsasl_la_LIBADD = @LIBINTL@ @LIBGCRYPT_LIBS@ @LIBNTLM_LIBS@ @GSSAPI_LIBS@ @LIBSTRINGPREP_LIBS@ -lm
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 
 localedir = $(datadir)/locale
 
 DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
-
-gunicomp.h gunidecomp.h: gen-unicode-tables.pl UnicodeData-3.2.0.txt LineBreak-3.2.0.txt SpecialCasing-3.2.0.txt CaseFolding-3.2.0.txt CompositionExclusions-3.2.0.txt
-	$(PERL) $(srcdir)/gen-unicode-tables.pl -decomp 3.2 UnicodeData-3.2.0.txt LineBreak-3.2.0.txt SpecialCasing-3.2.0.txt CaseFolding-3.2.0.txt CompositionExclusions-3.2.0.txt
 
 indent:
 	indent $(libgsasl_la_SOURCES)
