*** empty log message ***

--- a/.cvsignore
+++ b/.cvsignore
@@ -1,13 +1,26 @@
+ABOUT-NLS
+INSTALL
 Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache
+confdefs.h
+config.guess
 config.h
 config.h.in
 config.log
+config.rpath
 config.status
+config.sub
 configure
+conftest.c
+depcomp
+install-sh
+intl
 libgsasl-*.tar.gz
 libgsasl.pc
 libtool
+ltmain.sh
+missing
+mkinstalldirs
 stamp-h*
