--- a/po/.cvsignore
+++ b/po/.cvsignore
@@ -1,5 +1,13 @@
 Makefile
 Makefile.in
+Makefile.in.in
 POTFILES
+Rules-quot
+boldquot.sed
+en@boldquot.header
+en@quot.header
+insert-header.sin
+quot.sed
 remove-potcdate.sed
+remove-potcdate.sin
 sv.gmo
