Add rationale for #include's.

--- a/lib/gsasl.h.in
+++ b/lib/gsasl.h.in
@@ -1,4 +1,4 @@
-/* gsasl.h	header file for libgsasl -*- c -*-
+/* gsasl.h	header file for libgsasl                              -*- c -*-
  * Copyright (C) 2002  Simon Josefsson
  *
  * This file is part of libgsasl.
@@ -22,7 +22,8 @@
 #ifndef _GSASL_H
 #define _GSASL_H
 
-#include <stdio.h>
+#include <stdio.h>  /* FILE */
+#include <stddef.h> /* size_t */
 
 #ifdef __cplusplus
 extern "C" {
@@ -37,7 +38,7 @@ extern "C" {
    SASL mechanisms are named by strings, from 1 to 20 characters in
    length, consisting of upper-case letters, digits, hyphens, and/or
    underscores.  SASL mechanism names must be registered with the IANA. */
-enum { 
+enum {
   GSASL_MIN_MECHANISM_SIZE = 1,
   GSASL_MAX_MECHANISM_SIZE = 20
 };
@@ -119,25 +120,25 @@ extern void gsasl_done (Gsasl_ctx *ctx);
 extern const char *gsasl_check_version (const char *req_version);
 
 /* Callback handling */
-extern void gsasl_application_data_set (Gsasl_ctx *ctx, 
+extern void gsasl_application_data_set (Gsasl_ctx *ctx,
 					void *application_data);
 extern void *gsasl_application_data_get (Gsasl_ctx *ctx);
 
 /* Mechanism handling: listmech.c, supportp.c, suggest.c */
 extern int gsasl_client_listmech (Gsasl_ctx *ctx, char *out, size_t *outlen);
 extern int gsasl_client_support_p (Gsasl_ctx *ctx, const char *name);
-extern const char *gsasl_client_suggest_mechanism (Gsasl_ctx *ctx, 
+extern const char *gsasl_client_suggest_mechanism (Gsasl_ctx *ctx,
 						   const char *mechlist);
 
 extern int gsasl_server_listmech (Gsasl_ctx *ctx, char *out, size_t *outlen);
 extern int gsasl_server_support_p (Gsasl_ctx *ctx, const char *name);
-extern const char *gsasl_server_suggest_mechanism (Gsasl_ctx *ctx, 
+extern const char *gsasl_server_suggest_mechanism (Gsasl_ctx *ctx,
 						   const char *mechlist);
 
 /* Authentication functions: xstart.c, xstep.c, xfinish.c */
-extern int gsasl_client_start (Gsasl_ctx *ctx, const char *mech, 
+extern int gsasl_client_start (Gsasl_ctx *ctx, const char *mech,
 			       Gsasl_session_ctx **cctx);
-extern int gsasl_client_step (Gsasl_session_ctx *xctx, 
+extern int gsasl_client_step (Gsasl_session_ctx *xctx,
 			      const char *input, size_t input_len,
 			      char *output, size_t *output_len);
 extern int gsasl_client_step_base64 (Gsasl_session_ctx *xctx,
@@ -145,9 +146,9 @@ extern int gsasl_client_step_base64 (Gsasl_session_ctx *xctx,
 				     char *b64output,
 				     size_t b64output_len);
 extern void gsasl_client_finish (Gsasl_session_ctx *xctx);
-extern int gsasl_server_start (Gsasl_ctx *ctx, const char *mech, 
+extern int gsasl_server_start (Gsasl_ctx *ctx, const char *mech,
 			       Gsasl_session_ctx **sctx);
-extern int gsasl_server_step (Gsasl_session_ctx *xctx, 
+extern int gsasl_server_step (Gsasl_session_ctx *xctx,
 			      const char *input, size_t input_len,
 			      char *output, size_t *output_len);
 extern int gsasl_server_step_base64 (Gsasl_session_ctx *xctx,
@@ -160,7 +161,7 @@ extern void gsasl_server_finish (Gsasl_session_ctx *xctx);
 extern int gsasl_encode (Gsasl_session_ctx *xctx,
 			 const char *input, size_t input_len,
 			 char *output, size_t *output_len);
-extern int gsasl_decode (Gsasl_session_ctx *xctx, 
+extern int gsasl_decode (Gsasl_session_ctx *xctx,
 			 const char *input, size_t input_len,
 			 char *output, size_t *output_len);
 
@@ -176,13 +177,13 @@ extern int gsasl_base64_decode (char const *src,
 				char *target,
 				size_t targsize);
 extern void gsasl_hexdump (FILE *fh, const char *buffer, size_t len);
-extern int gsasl_md5pwd_get_password (const char *filename, 
+extern int gsasl_md5pwd_get_password (const char *filename,
 				      const char *username,
 				      char *key,
 				      size_t *keylen);
 
 /* Callback prototypes */
-typedef int (*Gsasl_client_callback_anonymous) (Gsasl_session_ctx *ctx, 
+typedef int (*Gsasl_client_callback_anonymous) (Gsasl_session_ctx *ctx,
 						char *out,
 						size_t *outlen);
 typedef int (*Gsasl_client_callback_authentication_id) (Gsasl_session_ctx *ctx,
@@ -191,17 +192,17 @@ typedef int (*Gsasl_client_callback_authentication_id) (Gsasl_session_ctx *ctx,
 typedef int (*Gsasl_client_callback_authorization_id) (Gsasl_session_ctx *ctx,
 						       char *out,
 						       size_t *outlen);
-typedef int (*Gsasl_client_callback_password) (Gsasl_session_ctx *ctx, 
+typedef int (*Gsasl_client_callback_password) (Gsasl_session_ctx *ctx,
 					       char *out,
 					       size_t *outlen);
-typedef int (*Gsasl_client_callback_passcode) (Gsasl_session_ctx *ctx, 
+typedef int (*Gsasl_client_callback_passcode) (Gsasl_session_ctx *ctx,
 					       char *out,
 					       size_t *outlen);
-typedef int (*Gsasl_client_callback_pin) (Gsasl_session_ctx *ctx, 
+typedef int (*Gsasl_client_callback_pin) (Gsasl_session_ctx *ctx,
 					  char *suggestion,
 					  char *out,
 					  size_t *outlen);
-typedef int (*Gsasl_client_callback_service) (Gsasl_session_ctx *ctx, 
+typedef int (*Gsasl_client_callback_service) (Gsasl_session_ctx *ctx,
 					      char *service,
 					      size_t *servicelen,
 					      char *hostname,
@@ -218,14 +219,14 @@ typedef int (*Gsasl_server_callback_retrieve) (Gsasl_session_ctx *ctx,
 					       const char *realm,
 					       char *key,
 					       size_t *keylen);
-typedef int (*Gsasl_server_callback_validate) (Gsasl_session_ctx *ctx, 
+typedef int (*Gsasl_server_callback_validate) (Gsasl_session_ctx *ctx,
 					       const char *authorization_id,
 					       const char *authentication_id,
 					       const char *password);
-typedef int (*Gsasl_server_callback_gssapi) (Gsasl_session_ctx *ctx, 
+typedef int (*Gsasl_server_callback_gssapi) (Gsasl_session_ctx *ctx,
 					     const char *clientname,
 					     const char *authentication_id);
-typedef int (*Gsasl_server_callback_securid) (Gsasl_session_ctx *ctx, 
+typedef int (*Gsasl_server_callback_securid) (Gsasl_session_ctx *ctx,
 					      const char *authentication_id,
 					      const char *authorization_id,
 					      const char *passcode,
@@ -240,7 +241,7 @@ typedef int (*Gsasl_server_callback_digest_md5) (Gsasl_session_ctx *ctx,
 						 char *username,
 						 char *realm,
 						 char *secrethash);
-typedef int (*Gsasl_server_callback_service) (Gsasl_session_ctx *ctx, 
+typedef int (*Gsasl_server_callback_service) (Gsasl_session_ctx *ctx,
 					      char *service,
 					      size_t *servicelen,
 					      char *hostname,
@@ -248,7 +249,7 @@ typedef int (*Gsasl_server_callback_service) (Gsasl_session_ctx *ctx,
 typedef int (*Gsasl_server_callback_external) (Gsasl_session_ctx *ctx);
 typedef int (*Gsasl_server_callback_anonymous) (Gsasl_session_ctx *ctx,
 						const char *token);
-typedef int (*Gsasl_server_callback_realm) (Gsasl_session_ctx *ctx, 
+typedef int (*Gsasl_server_callback_realm) (Gsasl_session_ctx *ctx,
 					    char *out,
 					    size_t *outlen,
 					    size_t nth);
@@ -259,59 +260,59 @@ typedef Gsasl_cipher (*Gsasl_server_callback_cipher) (Gsasl_session_ctx *ctx);
 /* Client callbacks */
 extern Gsasl_ctx *gsasl_client_ctx_get (Gsasl_session_ctx *cctx);
 
-extern void gsasl_client_application_data_set (Gsasl_session_ctx *xctx, 
+extern void gsasl_client_application_data_set (Gsasl_session_ctx *xctx,
 					       void *application_data);
 extern void *gsasl_client_application_data_get (Gsasl_session_ctx *ctx);
 
-extern void gsasl_client_callback_authorization_id_set (Gsasl_ctx *ctx, 
+extern void gsasl_client_callback_authorization_id_set (Gsasl_ctx *ctx,
 				Gsasl_client_callback_authorization_id cb);
 extern Gsasl_client_callback_authorization_id
 	gsasl_client_callback_authorization_id_get (Gsasl_ctx *ctx);
 
-extern void gsasl_client_callback_authentication_id_set (Gsasl_ctx *ctx, 
+extern void gsasl_client_callback_authentication_id_set (Gsasl_ctx *ctx,
 				Gsasl_client_callback_authentication_id cb);
 extern Gsasl_client_callback_authentication_id
 	gsasl_client_callback_authentication_id_get (Gsasl_ctx *ctx);
 
-extern void gsasl_client_callback_anonymous_set (Gsasl_ctx *ctx, 
+extern void gsasl_client_callback_anonymous_set (Gsasl_ctx *ctx,
 				Gsasl_client_callback_anonymous cb);
 extern Gsasl_client_callback_anonymous
 	gsasl_client_callback_anonymous_get (Gsasl_ctx *ctx);
 
-extern void gsasl_client_callback_password_set (Gsasl_ctx *ctx, 
+extern void gsasl_client_callback_password_set (Gsasl_ctx *ctx,
 				Gsasl_client_callback_password cb);
 extern Gsasl_client_callback_password
 	gsasl_client_callback_password_get (Gsasl_ctx *ctx);
 
-extern void gsasl_client_callback_passcode_set (Gsasl_ctx *ctx, 
+extern void gsasl_client_callback_passcode_set (Gsasl_ctx *ctx,
 				Gsasl_client_callback_passcode cb);
 extern Gsasl_client_callback_passcode
 	gsasl_client_callback_passcode_get (Gsasl_ctx *ctx);
 
-extern void gsasl_client_callback_pin_set (Gsasl_ctx *ctx, 
+extern void gsasl_client_callback_pin_set (Gsasl_ctx *ctx,
 					   Gsasl_client_callback_pin cb);
 extern Gsasl_client_callback_pin
 	gsasl_client_callback_pin_get (Gsasl_ctx *ctx);
 
-extern void gsasl_client_callback_service_set (Gsasl_ctx *ctx, 
+extern void gsasl_client_callback_service_set (Gsasl_ctx *ctx,
 					   Gsasl_client_callback_service cb);
 extern Gsasl_client_callback_service
 	gsasl_client_callback_service_get (Gsasl_ctx *ctx);
 
-extern void gsasl_client_callback_qop_set (Gsasl_ctx *ctx, 
+extern void gsasl_client_callback_qop_set (Gsasl_ctx *ctx,
 					   Gsasl_client_callback_qop cb);
 extern Gsasl_client_callback_qop
 	gsasl_client_callback_qop_get (Gsasl_ctx *ctx);
 
-extern void gsasl_client_callback_maxbuf_set (Gsasl_ctx *ctx, 
+extern void gsasl_client_callback_maxbuf_set (Gsasl_ctx *ctx,
 					      Gsasl_client_callback_maxbuf cb);
-extern Gsasl_client_callback_maxbuf 
+extern Gsasl_client_callback_maxbuf
 	gsasl_client_callback_maxbuf_get (Gsasl_ctx *ctx);
 
 /* Server callbacks */
 extern Gsasl_ctx *gsasl_server_ctx_get (Gsasl_session_ctx *sctx);
 
-extern void gsasl_server_application_data_set (Gsasl_session_ctx *xctx, 
+extern void gsasl_server_application_data_set (Gsasl_session_ctx *xctx,
 					       void *application_data);
 extern void *gsasl_server_application_data_get (Gsasl_session_ctx *ctx);
 
@@ -325,57 +326,57 @@ extern void gsasl_server_callback_retrieve_set (Gsasl_ctx *ctx,
 extern Gsasl_server_callback_retrieve
 	gsasl_server_callback_retrieve_get (Gsasl_ctx *ctx);
 
-extern void gsasl_server_callback_cram_md5_set (Gsasl_ctx *ctx, 
+extern void gsasl_server_callback_cram_md5_set (Gsasl_ctx *ctx,
 					Gsasl_server_callback_cram_md5 cb);
-extern Gsasl_server_callback_cram_md5 
+extern Gsasl_server_callback_cram_md5
 	gsasl_server_callback_cram_md5_get (Gsasl_ctx *ctx);
 
-extern void gsasl_server_callback_digest_md5_set (Gsasl_ctx *ctx, 
+extern void gsasl_server_callback_digest_md5_set (Gsasl_ctx *ctx,
 					Gsasl_server_callback_digest_md5 cb);
-extern Gsasl_server_callback_digest_md5 
+extern Gsasl_server_callback_digest_md5
 	gsasl_server_callback_digest_md5_get (Gsasl_ctx *ctx);
 
-extern void gsasl_server_callback_external_set (Gsasl_ctx *ctx, 
+extern void gsasl_server_callback_external_set (Gsasl_ctx *ctx,
 					   Gsasl_server_callback_external cb);
 extern Gsasl_server_callback_external
 	gsasl_server_callback_external_get (Gsasl_ctx *ctx);
 
-extern void gsasl_server_callback_anonymous_set (Gsasl_ctx *ctx, 
+extern void gsasl_server_callback_anonymous_set (Gsasl_ctx *ctx,
 					  Gsasl_server_callback_anonymous cb);
 extern Gsasl_server_callback_anonymous
 	gsasl_server_callback_anonymous_get (Gsasl_ctx *ctx);
 
-extern void gsasl_server_callback_realm_set (Gsasl_ctx *ctx, 
+extern void gsasl_server_callback_realm_set (Gsasl_ctx *ctx,
 					     Gsasl_server_callback_realm cb);
 extern Gsasl_server_callback_realm
 	gsasl_server_callback_realm_get (Gsasl_ctx *ctx);
 
-extern void gsasl_server_callback_qop_set (Gsasl_ctx *ctx, 
+extern void gsasl_server_callback_qop_set (Gsasl_ctx *ctx,
 					   Gsasl_server_callback_qop cb);
 extern Gsasl_server_callback_qop
 	gsasl_server_callback_qop_get (Gsasl_ctx *ctx);
 
-extern void gsasl_server_callback_maxbuf_set (Gsasl_ctx *ctx, 
+extern void gsasl_server_callback_maxbuf_set (Gsasl_ctx *ctx,
 					      Gsasl_server_callback_maxbuf cb);
 extern Gsasl_server_callback_maxbuf
 	gsasl_server_callback_maxbuf_get (Gsasl_ctx *ctx);
 
-extern void gsasl_server_callback_cipher_set (Gsasl_ctx *ctx, 
+extern void gsasl_server_callback_cipher_set (Gsasl_ctx *ctx,
 					      Gsasl_server_callback_cipher cb);
 extern Gsasl_server_callback_cipher
 	gsasl_server_callback_cipher_get (Gsasl_ctx *ctx);
 
-extern void gsasl_server_callback_securid_set (Gsasl_ctx *ctx, 
+extern void gsasl_server_callback_securid_set (Gsasl_ctx *ctx,
 					     Gsasl_server_callback_securid cb);
 extern Gsasl_server_callback_securid
 	gsasl_server_callback_securid_get (Gsasl_ctx *ctx);
 
-extern void gsasl_server_callback_gssapi_set (Gsasl_ctx *ctx, 
+extern void gsasl_server_callback_gssapi_set (Gsasl_ctx *ctx,
 					      Gsasl_server_callback_gssapi cb);
 extern Gsasl_server_callback_gssapi
 	gsasl_server_callback_gssapi_get (Gsasl_ctx *ctx);
 
-extern void gsasl_server_callback_service_set (Gsasl_ctx *ctx, 
+extern void gsasl_server_callback_service_set (Gsasl_ctx *ctx,
 					     Gsasl_server_callback_service cb);
 extern Gsasl_server_callback_service
 	gsasl_server_callback_service_get (Gsasl_ctx *ctx);
