--- a/Makefile.am
+++ b/Makefile.am
@@ -17,6 +17,8 @@
 # License along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA
 
+DISTCHECK_CONFIGURE_FLAGS = --without-included-gettext
+
 EXTRA_DIST = config.h.in config.rpath mkinstalldirs libgsasl.pc.in
 
 pkgconfigdir = $(libdir)/pkgconfig
