--- a/Makefile.am
+++ b/Makefile.am
@@ -34,7 +34,7 @@ ACLOCAL_AMFLAGS = -I m4 -I argp
 
 ChangeLog:
 	cvs2cl --fsf --usermap .cvsusers --separate-header -I \
-	"ChangeLog|.cvsignore|.cvsusers|autogen.sh|doc/specification/.*"
+    "ChangeLog|.cvsignore|.cvsusers|autogen.sh|doc/specification|libstringprep"
 
 indent:
 	(cd lib && make indent)
