--- a/configure.ac
+++ b/configure.ac
@@ -2,20 +2,20 @@ dnl Process this file with autoconf to produce a configure script.
 
 dnl Copyright (C) 2002 Simon Josefsson.
 dnl
-dnl This file is part of Libgsasl.
+dnl This file is part of GNU SASL.
 dnl
-dnl Libgsasl is free software; you can redistribute it and/or modify
+dnl GNU SASL is free software; you can redistribute it and/or modify
 dnl it under the terms of the GNU Lesser General Public License as
 dnl published by the Free Software Foundation; either version 2.1 of
 dnl the License, or (at your option) any later version.
 dnl
-dnl Libgsasl is distributed in the hope that it will be useful,
+dnl GNU SASL is distributed in the hope that it will be useful,
 dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
 dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 dnl GNU Lesser General Public License for more details.
 dnl
 dnl You should have received a copy of the GNU Lesser General Public
-dnl License along with Libgsasl; if not, write to the Free Software
+dnl License along with GNU SASL; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA
 
 AC_PREREQ(2.50)
