--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -1,14 +1,14 @@
 ## Process this file with automake to produce Makefile.in
 # Copyright (C) 2002 Simon Josefsson.
 #
-# This file is part of Libgsasl.
+# This file is part of GNU SASL.
 #
-# Libgsasl is free software; you can redistribute it and/or modify
+# GNU SASL is free software; you can redistribute it and/or modify
 # it under the terms of the GNU Lesser General Public License as
 # published by the Free Software Foundation; either version 2.1 of
 # the License, or (at your option) any later version.
 #
-# Libgsasl is distributed in the hope that it will be useful,
+# GNU SASL is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU Lesser General Public License for more details.
