--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -24,7 +24,8 @@ gsasl_texi_auto_deps = gsasl-api-version.texi gsasl-api-global.texi \
 
 # gsasl.xml gsasl-db.txt gsasl-db.html gsasl-db.ps gsasl-db.pdf
 
-generated = gsasl.txt gsasl.html gsasl.ps gsasl.pdf gsasl.info* \
+generated = gsasl.txt gsasl.html gsasl.ps gsasl.pdf \
+	gsasl.info gsasl.info-1 gsasl.info-2 gsasl.info-3 gsasl.info-4 \
 	$(gsasl_texi_auto_deps)
 
 man_MANS = gsasl.1
