--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -24,17 +24,12 @@ gsasl_texi_auto_deps = gsasl-api-version.texi gsasl-api-global.texi \
 
 # gsasl.xml gsasl-db.txt gsasl-db.html gsasl-db.ps gsasl-db.pdf
 
-generated = gsasl.txt gsasl.html gsasl.ps gsasl.pdf \
-	gsasl.info gsasl.info-1 gsasl.info-2 gsasl.info-3 gsasl.info-4 \
-	$(gsasl_texi_auto_deps)
-
 man_MANS = gsasl.1
-
-MAINTAINERCLEANFILES = $(generated)
 
 DISTCLEANFILES = $(man_MANS)
 
-EXTRA_DIST = gdoc gdoc-error gsasl-example1.c $(man_MANS) $(generated)
+EXTRA_DIST = gdoc gdoc-error gsasl-example1.c $(man_MANS) \
+	gsasl.txt gsasl.html gsasl.ps gsasl.pdf $(gsasl_texi_auto_deps)
 
 info_TEXINFOS = gsasl.texi
 gsasl_TEXINFOS = gpl.texi fdl.texi $(gsasl_texi_auto_deps) \
